--- a/AntVior/style-main.css
+++ b/AntVior/style-main.css
@@ -1,18 +1,3 @@
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    box-sizing: border-box;
-    /* adds animation for all transitions */
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
-    margin: 0;
-    padding: 0;
-    -webkit-text-size-adjust: none;
-}
-
 body,
 html {
     height: 100%;
@@ -52,6 +37,21 @@ html {
 #drawer-toggle {
     position: absolute;
     opacity: 0;
+}
+
+#drawer-toggle-label, #drawer {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
+    /* adds animation for all transitions */
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+    margin: 0;
+    padding: 0;
+    -webkit-text-size-adjust: none;
 }
 
 #drawer-toggle-label {
@@ -124,28 +124,79 @@ html {
     padding-top: 80px;
     margin-top: 50%;
     display: flex;
-    align-items: left;
+    align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding-left: 0;
+    margin-left: 0;
 }
 
 #drawer ul a {
-    display: block;
+    display: inline-block;
     padding-bottom: 20px;
     padding-left: 40px;
-    color: #FAFAFA;
+    color: #BDBDBD;
     text-decoration: none;
-    font-family: 'Lato', sans-serif;
-    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 17px;
     font-weight: 500;
-    text-transform: uppercase;
-    font-weight: bold;
     display: block;
     margin: 0 auto;
 }
 
 #drawer ul a:hover {
-    color: #00ACC1;
+    color: #FAFAFA;
+}
+
+.cmn-toggle {
+  position: absolute;
+  visibility: hidden;
+}
+
+.cmn-toggle + label {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  outline: none;
+  user-select: none;
+}
+
+input.cmn-toggle-round-flat + label {
+  /* width = 2*height or 2*border-radius */
+  padding: 2px;
+  width: 40px;
+  height: 20px;
+  border: 1px solid #dddddd;
+  border-radius: 60px;
+  transition: border-color 0.4s;
+}
+
+input.cmn-toggle-round-flat + label:before,
+input.cmn-toggle-round-flat + label:after {
+  display: block;
+  position: absolute;
+  content: "";
+}
+
+input.cmn-toggle-round-flat + label:after {
+  /* width = 2*border-radius */
+  top: 4px;
+  left: 4px;
+  bottom: 4px;
+  width: 10px;
+  background-color: #dddddd;
+  border-radius: 52px;
+  transition: margin 0.4s, background 0.4s;
+}
+
+input.cmn-toggle-round-flat:checked + label {
+  border-color: #00ACC1;
+}
+
+input.cmn-toggle-round-flat:checked + label:after {
+  /* margin-left = border-radius from 'input.cmn-toggle-round-flat + label' */
+  margin-left: 20px;
+  background-color: #00ACC1;
 }
 
 .main-title {
@@ -502,13 +553,16 @@ html {
     #drawer-toggle:checked ~ #drawer-toggle-label {
         right: calc(100% - 50px);
     }
+    
+     #background {
+        overflow: hidden;
+    }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) { 
     #background {
         overflow: hidden;
     }
-    
     .main-title {
         display: block;
         margin: 0 auto;
@@ -569,13 +623,12 @@ html {
     #drawer ul a {
         display: block;
         padding-bottom: 15px;
-        padding-left: 40px;
+        padding-left: 20px;
         color: #FAFAFA;
         text-decoration: none;
         font-family: 'Lato', sans-serif;
         font-size: 12px;
         font-weight: bold;
-        text-transform: uppercase;
     }
 
     #drawer ul a:hover {
@@ -619,4 +672,10 @@ html {
         animation: load 4s linear;
     }
 
+}
+
+@media screen and (max-width: 1024px) {
+    #background {
+        overflow: hidden;
+    }
 }
